# rust_tutorials

./: README.md
cudidotdev_axum_postgres/: .env  Cargo.toml  README.MD
cudidotdev_axum_postgres/migrations/: 0001_add_tasks_table.sql
cudidotdev_axum_postgres/src/: main.rs
dreams_of_code_sqlx_favorite_postgres/: Cargo.toml  README.md
dreams_of_code_sqlx_favorite_postgres/migrations/: 0001_books_table.sql  0002_authors_table.sql  0003_migrate_author_data.down.sql  0003_migrate_author_data.sql
dreams_of_code_sqlx_favorite_postgres/src/: main.rs
jeremy_chone_sqlx_postgres/: Cargo.toml  README.md  docker-compose.yml
jeremy_chone_sqlx_postgres/src/: main.rs
semicolon_di_in_rust/: Cargo.toml  README.md
semicolon_di_in_rust/src/: main.rs  model.rs  product_repo.rs
shuttle_axum_getting_started/: Cargo.toml
shuttle_axum_getting_started/src/: main.rs
